Version 1.1.0-CVS (?? ??? 2005)
 - Fixed bug 1430755: Lunar phases mssing when display all days selected
 - Fixed bug 1430562: translation-file cannot be updated properly
 - Fixed bug 1427479: Repated overlapping event (=2 days) will not be displayed
 - Fixed bug 1340790: Return to proper view after edit or other action
 - Fixed bug 1409552: Weekly repeating event shifts days
 - Fixed bug 1424413: calling upcoming.php as include doesn't work after 02/03/06
 - Moved all common images into images folder
 - Added optional lunar phases to month.php
 - Fixed bug 1410156: Pop ups displaying incorrectly in IE6
 - Fixed bug 1427068: SMTP mail doesn't accept admin authorization settings
 - Fixed bug 1425311: saving system setting requires 2x clicks at the save-button
 - Fixed bug 1425316: Event who needs 2 days cannot be translated correctly
 - Fixed bug 1424190: SERVER_URL short if WC not top level folder
 - Fixed bug 1414017: public prefs choice gives "Redirection limit exceeded" error
 - Fixed bug 1413527: Public access not seeing unapproved events
 - Fixed bug 1403574: upcoming.php does not work with HTTP Auth
 - Implemented patch 1418938: Upcoming.php updated to run as include or command line
 - Fixed bug 1403574: upcoming.php does not work with HTTP Auth
 - Added time selections to menu bar
 - Added admin option to display All Timezones (approx 360)
 - Fixed bug 1413327: repeated events appear out of order in various pages
 - Fixed bug 1421389: user-app-: login-app opens wrong login file in _top.
 - New top menu bar added
 - Fixed bug 1422509: Search doesn't search subject, only within description
 - Fixed bug 1422507: Timezone upgrade fails with MySQL
 - Fixed bug 1409412: Popup color chooser doesn't appear in preferences
 - Fixed bug 1403568: patch for incorrect links in minical.php output
 - Fixed bug 1421829: Next month skips a month
 - Renamed php-dbi.php to dbi4php.php since the name "PHPDBI" is already
   in use on sourceforge.