@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1430670: Undefined Index in functions.php
       1430755: Lunar phases mssing when display all days selected
       1430562: translation-file cannot be updated properly
       1427479: Repated overlapping event (=2 days) will not be displayed
