@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2005)
+ - Fixed bug 1430670: Undefined Index in functions.php
  - Fixed bug 1430755: Lunar phases mssing when display all days selected
  - Fixed bug 1430562: translation-file cannot be updated properly
  - Fixed bug 1427479: Repated overlapping event (=2 days) will not be displayed
